--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="csrf-token" content="BMLu3EQStqOBdp787as1CLxy7jCwD0nnlrzlCiLa">
-    <title>Liên hệ</title>
+    <title>Contact</title>
     <meta name="description" content="Rio Sai Gon">
     <meta name="keywords" content>
     <meta name="author" content="Rio Sai Gon">
@@ -89,7 +89,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link rio-text-title font-16-19 black" href="projects.html">
+                      <a class="nav-link rio-text-title font-16-19 black" href="projects-international.html">
                         <div class="animations" data-animation="text" data-size="1.2">
                           Project
                         </div>
@@ -292,86 +292,63 @@
         </main>
         <div class="layout-footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <ul class="padding-footer logo-list">
-                            <li class="logo-item"><a href="../index.html" target="_blank"><img alt="RIO Sài Gòn"
-                                        src="../images/icon/rio_sg.svg" /> </a></li>
-                            <li class="logo-item"><a href="https://hanoi-agency.rio.vn/" target="_blank"><img
-                                        alt="RIO Hà Nội" src="../images/icon/rio_hn.svg" /> </a></li>
-                            <li class="logo-item"><a href="https://book.rio.vn/" target="_blank"><img alt="RIO Book"
-                                        src="../images/icon/rio_book.svg" /> </a></li>
-                            <li class="logo-item"><a href="https://dichvuxuatban.vn/" target="_blank"><img
-                                        alt="RIO Publishing Service ++" src="../images/icon/rio_ps.svg" /> </a></li>
-                            <li class="logo-item"><a href="https://www.facebook.com/vietnamhalography/"
-                                    target="_blank"><img alt="Vietnam Halo Graphy" src="../images/icon/rio_halo.svg" />
-                                </a></li>
-                            <li class="logo-item"><a href="https://rio.vn/" target="_blank"><img alt="RIO Tổng"
-                                        src="../images/icon/rio_tong.svg" /> </a></li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-lg-5 offset-lg-1">
-                        <div class="padding-footer group-info">
-                            <div class="group-item">
-                                <div class="rio-text font-16-120 white email"><a
-                                        href="../cdn-cgi/l/email-protection.html" class="__cf_email__"
-                                        data-cfemail="61120008060e0f2113080e4f170f">[email&#160;protected]</a></div>
-                                <div class="rio-text font-16-120 white website">www.saigon.rio.vn</div>
-                            </div>
-                            <div class="group-item">
-                                <div class="rio-text font-16-120 white phone">+84 28 6658 7057</div>
-                                <div class="rio-text font-16-120 white address">Block A1, The Gold View<br />
-                                    346 Ben Van Don, W1, D4, HCMC</div>
-                            </div>
-                        </div>
-                    </div>
+              <div class="row">
+                <div class="col-12 col-lg-6">
+                  <ul class="padding-footer logo-list">
+                    <li class="logo-item">
+                      <a href="https://reddi.studio/" target="_blank"><img alt="Reddi Studio"
+                          src="upload/images/logo.png" style="width: 90px; height: 90px" />
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <hr class="line" />
-                    </div>
+              </div>
+      
+              <div class="row">
+                <div class="col-12">
+                  <hr class="line" />
                 </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <div class="group-copyright">
-                            <div class="copyright">
-                                <div class="rio-text font-16-20 white">© 2012 – 2022 RIO Saigon Agency - All Rights
-                                    Reserved.</div>
-                            </div>
-                            <ul class="social-network">
-                                <li class="social-item">
-                                    <a class="rio-text font-16-20 white" href="https://www.behance.net/riosaigonagency"
-                                        rel="noopener" target="_blank">
-                                        Behance
-                                    </a>
-                                </li>
-                                <li class="social-item">
-                                    <a class="rio-text font-16-20 white" href="https://www.facebook.com/saigon.rio.vn"
-                                        rel="noopener" target="_blank">
-                                        Facebook
-                                    </a>
-                                </li>
-                                <li class="social-item">
-                                    <a class="rio-text font-16-20 white" href="https://www.instagram.com/riosaigon.vn/"
-                                        rel="noopener" target="_blank">
-                                        Instagram
-                                    </a>
-                                </li>
-                                <li class="social-item">
-                                    <a class="rio-text font-16-20 white"
-                                        href="https://www.linkedin.com/company/riosaigon/" rel="noopener"
-                                        target="_blank">
-                                        LinkedIn
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+              </div>
+      
+              <div class="row">
+                <div class="col-12">
+                  <div class="group-copyright">
+                    <div class="copyright">
+                      <div class="rio-text font-16-20 white">
+                        © 2012 – 2022 REDDI STUDIO - All Rights Reserved.
+                      </div>
                     </div>
+                    <ul class="social-network">
+                      <li class="social-item">
+                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                          target="_blank">
+                          Behance
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                          target="_blank">
+                          Facebook
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                          target="_blank">
+                          Instagram
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                          target="_blank">
+                          LinkedIn
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
     </div>
 
 
