--- a/du-an-quoc-te.html
+++ b/du-an-quoc-te.html
@@ -86,7 +86,7 @@
                   </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link rio-text-title font-16-19 black" href="du-an.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="du-an-quoc-te.html">
                     <div class="animations active" data-animation="text" data-size="1.2">
                       Dự án
                     </div>
@@ -120,7 +120,7 @@
                         </div>
                       </a>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="projects-international.html">
+                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="projects.html">
                           en
                         </a>
                       </div>
@@ -132,7 +132,7 @@
             <div class="header-bottom">
               <a class="navbar-brand" href="index.html">
                 <div class="logo">
-                  <img class src="upload/images/logo.png" alt="Trang chủ" style="height: 100px"/>
+                  <img class src="upload/images/logo.png" alt="Trang chủ" style="height: 100px" />
                 </div>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse">
@@ -189,11 +189,11 @@
             <div class="row">
               <div class="col-12 col-lg-8 offset-lg-2">
                 <ul>
-                  <li>
-                    <a href="du-an.html">Dự án trong nước</a>
-                  </li>
                   <li class="active">
                     <a href="du-an-quoc-te.html">Dự án quốc tế</a>
+                  </li>
+                  <li>
+                    <a href="du-an.html">Dự án trong nước</a>
                   </li>
                 </ul>
               </div>
@@ -203,7 +203,6 @@
             </div>
           </div>
         </section>
-
         <section class="category-detail">
           <div class="container">
             <div class="list-project-preview">
