--- a/du-an.html
+++ b/du-an.html
@@ -86,7 +86,7 @@
                   </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link rio-text-title font-16-19 black" href="du-an.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="du-an-quoc-te.html">
                     <div class="animations active" data-animation="text" data-size="1.2">
                       Dự án
                     </div>
@@ -120,7 +120,7 @@
                         </div>
                       </a>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="projects.html">
+                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="projects-international.html">
                           en
                         </a>
                       </div>
@@ -132,7 +132,7 @@
             <div class="header-bottom">
               <a class="navbar-brand" href="index.html">
                 <div class="logo">
-                  <img class src="upload/images/logo.png" alt="Trang chủ" style="height: 100px" />
+                  <img class src="upload/images/logo.png" alt="Trang chủ" style="height: 100px"/>
                 </div>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse">
@@ -189,11 +189,11 @@
             <div class="row">
               <div class="col-12 col-lg-8 offset-lg-2">
                 <ul>
+                  <li>
+                    <a href="du-an-quoc-te.html">Dự án quốc tế</a>
+                  </li>
                   <li class="active">
                     <a href="du-an.html">Dự án trong nước</a>
-                  </li>
-                  <li class>
-                    <a href="du-an-quoc-te.html">Dự án quốc tế</a>
                   </li>
                 </ul>
               </div>
@@ -242,8 +242,8 @@
                     <a class="project-item" href="#">
                       <div class="preview">
                         <div class="img-preview"
-                          data-image="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/0.ẢNH BÀI.jpg"
-                          data-gif="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/Vincom-20.jpg">
+                          data-image="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/Vincom-45.jpg"
+                          data-gif="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/0.ẢNH BÀI.jpg">
                         </div>
                       </div>
                       <div class="item-name rio-subtitle">
@@ -268,7 +268,7 @@
                     <a class="project-item" href="#">
                       <div class="preview">
                         <div class="img-preview"
-                          data-image="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/0.ẢNH BÌA.png"
+                          data-image="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/580183114148577.6035c72374c9d.png"
                           data-gif="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/56130b114148577.6035c723bd897.png">
                         </div>
                       </div>
@@ -325,8 +325,8 @@
                     <a class="project-item" href="#">
                       <div class="preview">
                         <div class="img-preview"
-                          data-image="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/0.ẢNH BÀI.jpg"
-                          data-gif="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/Vincom-20.jpg">
+                          data-image="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/Vincom-45.jpg"
+                          data-gif="upload/images/projects/domestic/3. QUẢNG CÁO OOH_VINCOM/0.ẢNH BÀI.jpg">
                         </div>
                       </div>
                       <div class="item-name rio-subtitle">
@@ -351,7 +351,7 @@
                     <a class="project-item" href="#">
                       <div class="preview">
                         <div class="img-preview"
-                          data-image="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/0.ẢNH BÌA.png"
+                          data-image="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/580183114148577.6035c72374c9d.png"
                           data-gif="upload/images/projects/domestic/5. BRANDING_KAMPONG CHICKEN/56130b114148577.6035c723bd897.png">
                         </div>
                       </div>
