--- a/lien-he.html
+++ b/lien-he.html
@@ -89,7 +89,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link rio-text-title font-16-19 black" href="du-an.html">
+                      <a class="nav-link rio-text-title font-16-19 black" href="du-an-quoc-te.html">
                         <div class="animations" data-animation="text" data-size="1.2">
                           Dự án
                         </div>
