--- a/projects-international.html
+++ b/projects-international.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="csrf-token" content="BMLu3EQStqOBdp787as1CLxy7jCwD0nnlrzlCiLa">
-    <title>Dự án</title>
+    <title>Projects</title>
     <meta name="description" content="Reddi Studio">
     <meta name="keywords" content>
     <meta name="author" content="Reddi Studio">
@@ -86,7 +86,7 @@
                   </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link rio-text-title font-16-19 black" href="projects.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="projects-international.html">
                     <div class="animations active" data-animation="text" data-size="1.2">
                       Project
                     </div>
@@ -189,11 +189,11 @@
                         <div class="row">
                             <div class="col-12 col-lg-8 offset-lg-2">
                                 <ul>
+                                    <li class="active">
+                                      <a href="projects-international.html">International Projects</a>
+                                  </li>
                                     <li >
                                         <a href="projects.html">Domestic Projects</a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="projects-international.html">International Projects</a>
                                     </li>
                                 </ul>
                             </div>
