--- a/dich-vu.html
+++ b/dich-vu.html
@@ -89,7 +89,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link rio-text-title font-16-19 black" href="du-an.html">
+                      <a class="nav-link rio-text-title font-16-19 black" href="du-an-quoc-te.html">
                         <div class="animations" data-animation="text" data-size="1.2">
                           Dự án
                         </div>
@@ -298,7 +298,7 @@
                                         <td class="title active">
                                             <span style="font-size:20px;">
                                                 <span style="font-family:Mulish,sans-serif;">
-                                                    <strong>Media/ Production</strong>
+                                                    <strong>Media Production</strong>
                                                 </span>
                                             </span>
                                         </td>
