--- a/en.html
+++ b/en.html
@@ -85,7 +85,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link rio-text-title font-16-19 black" href="projects.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="projects-international.html">
                     <div class="animations" data-animation="text" data-size="1.2">
                       Project
                     </div>
@@ -151,15 +151,13 @@
           <div class="rio-team">
             <div class="image text-center">
               <div class="animations full-width" data-animation="w" data-size="0.3" data-zindex="9">
-                <div class="portfolio-slide">
-                  <div class="portfolio-slide-item">
-                    <div class="img-fit-ratio-banner">
-                      <img alt="" src="upload/images/banner/bannwe1tv.png" />
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="upload/images/banner/banner1TA.png" alt="First slide">
                     </div>
-                  </div>
-                  <div class="portfolio-slide-item">
-                    <div class="img-fit-ratio-banner">
-                      <img alt="" src="upload/images/banner/bannwer2tv.png" />
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="upload/images/banner/BANNERTA2.png" alt="Second slide">
                     </div>
                   </div>
                 </div>
