--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Rio Sai Gon">
     <meta name="keywords" content>
     <meta name="author" content="Rio Sai Gon">
-    <link rel="shortcut icon" href="upload/images/favicon.ico" />
+    <link rel="shortcut icon" href="upload/images/logo.png" />
 
     <meta property="og:locale" content="vi" />
     <meta property="og:title" content="Giải pháp" />
@@ -89,7 +89,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link rio-text-title font-16-19 black" href="projects.html">
+                                    <a class="nav-link rio-text-title font-16-19 black" href="projects-international.html">
                                         <div class="animations" data-animation="text" data-size="1.2">
                                             Project
                                         </div>
@@ -297,7 +297,7 @@
                                         <td class="title active">
                                             <span style="font-size:20px;">
                                                 <span style="font-family:Mulish,sans-serif;">
-                                                    <strong>Media/ Production</strong>
+                                                    <strong>Media Production</strong>
                                                 </span>
                                             </span>
                                         </td>
