--- a/du-an-quoc-te.html
+++ b/du-an-quoc-te.html
@@ -289,6 +289,45 @@
                       </div>
                     </a>
                   </div>
+                  <div class="item">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/7. LAYOUT DESIGN_ZINE/ảnh bìa.png"
+                          data-gif="upload/images/projects/international/7. LAYOUT DESIGN_ZINE/ảnh phụ.png">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        LAYOUT DESIGN_ZINE
+                      </div>
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/8. TEMPLATE DESIGN_TRAVELWAY/ảnh nền.jpg"
+                          data-gif="upload/images/projects/international/8. TEMPLATE DESIGN_TRAVELWAY/ảnh phụ.jpg">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        TEMPLATE DESIGN_TRAVELWAY
+                      </div>
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/9. PRODUCT PHOTOGRAPHY_CHANTAGE/ảnh nền.jpg"
+                          data-gif="upload/images/projects/international/9. PRODUCT PHOTOGRAPHY_CHANTAGE/ảnh phụ.jpg">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        PRODUCT PHOTOGRAPHY_CHANTAGE
+                      </div>
+                    </a>
+                  </div>
                 </div>
                 <div class="btn-arrow btn-next"></div>
               </div>
@@ -369,6 +408,45 @@
                       </div>
                       <div class="item-name rio-subtitle">
                         LANDING PAGE DESIGN_TEMPORAL
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-12 col-lg-4">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/7. LAYOUT DESIGN_ZINE/ảnh bìa.png"
+                          data-gif="upload/images/projects/international/7. LAYOUT DESIGN_ZINE/ảnh phụ.png">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        LAYOUT DESIGN_ZINE
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-12 col-lg-4">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/8. TEMPLATE DESIGN_TRAVELWAY/ảnh nền.jpg"
+                          data-gif="upload/images/projects/international/8. TEMPLATE DESIGN_TRAVELWAY/ảnh phụ.jpg">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        TEMPLATE DESIGN_TRAVELWAY
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-12 col-lg-4">
+                    <a class="project-item" href="#">
+                      <div class="preview">
+                        <div class="img-preview"
+                          data-image="upload/images/projects/international/9. PRODUCT PHOTOGRAPHY_CHANTAGE/ảnh nền.jpg"
+                          data-gif="upload/images/projects/international/9. PRODUCT PHOTOGRAPHY_CHANTAGE/ảnh phụ.jpg">
+                        </div>
+                      </div>
+                      <div class="item-name rio-subtitle">
+                        PRODUCT PHOTOGRAPHY_CHANTAGE
                       </div>
                     </a>
                   </div>
