--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="csrf-token" content="BMLu3EQStqOBdp787as1CLxy7jCwD0nnlrzlCiLa" />
-  <title>Trang chủ</title>
+  <title>Home</title>
   <meta name="description" content="Reddio Studio" />
   <meta name="keywords" content />
   <meta name="author" content="Reddio Studio" />
-  <link rel="shortcut icon" href="upload/images/logo.png" />
+  <link rel="shortcut icon" href="upload/images/favicon.png" type="image/x-icon" />
 
   <meta property="og:locale" content="vi" />
   <meta property="og:title" content="Trang chủ" />
@@ -65,7 +65,7 @@
         <div class="menu-wrap">
           <a class="navbar-brand" href="index.html">
             <div class="logo">
-              <img class src="upload/images/logo.png" style="height: 100px" alt="Trang chủ" />
+              <img class src="upload/images/logo.png" alt="Trang chủ" />
             </div>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse">
@@ -80,28 +80,28 @@
                 <li class="nav-item active">
                   <a class="nav-link rio-text-title font-16-19 black" href="index.html">
                     <div class="animations active" data-animation="text" data-size="1.2">
-                      Trang chủ
+                      Home
                     </div>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link rio-text-title font-16-19 black" href="du-an-quoc-te.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="projects-international.html">
                     <div class="animations" data-animation="text" data-size="1.2">
-                      Dự án
+                      Project
                     </div>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link rio-text-title font-16-19 black" href="dich-vu.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="services.html">
                     <div class="animations" data-animation="text" data-size="1.2">
-                      Dịch vụ
+                      Services
                     </div>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link rio-text-title font-16-19 black" href="lien-he.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="contact.html">
                     <div class="animations" data-animation="text" data-size="1.2">
-                      Liên hệ
+                      Contacts
                     </div>
                   </a>
                 </li>
@@ -112,15 +112,15 @@
                       <a class="nav-link-lang" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <div class="lang-text rio-text-title font-16-19 black">
-                          vi
+                          en
                         </div>
                         <div class="arrow arrow-down">
                           <i class="fa fa-chevron-down" style="color: #000000"></i>
                         </div>
                       </a>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="en.html">
-                          en
+                        <a class="dropdown-item lang-text rio-text-title font-16-19 black" href="vi.html">
+                          vi
                         </a>
                       </div>
                     </div>
@@ -154,10 +154,10 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="upload/images/banner/bannwe1tv.png" alt="First slide">
+                      <img class="d-block w-100" src="upload/images/banner/banner1TA.png" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="upload/images/banner/bannwer2tv.png" alt="Second slide">
+                      <img class="d-block w-100" src="upload/images/banner/banner2TA.webp" alt="Second slide">
                     </div>
                   </div>
                 </div>
@@ -169,8 +169,7 @@
                       <div class="col-12" mb="0" mt="0">
                         <div class="rio-text-title font-22-26 title">
                           <span style="font-family: Mulish, sans-serif"><span style="font-size: 28px"><span
-                                style="font-weight: 800"><strong>TÂM HUYẾT ĐẾN TỪ ĐỘI NGŨ CỦA REDDI
-                                  STUDIO</strong></span></span></span>
+                                style="font-weight: 800"><strong>ENTHUSIASM FROM OUR REDDI STUDIO TEAM</strong></span></span></span>
                         </div>
 
                         <div class="rio-text-22-36" mt style="text-align: center">
@@ -187,14 +186,9 @@
                                 font-weight: 500;
                                 font-family: Merriweather, sans-serif;
                               ">
-                            Reddi Studio tập trung vào thế mạnh sản xuất Media
-                            và chăm sóc hình ảnh truyền thông cho doanh
-                            nghiệp. Chúng tôi luôn nỗ lực để cung cấp giải
-                            pháp hiệu quả và tối ưu trong mỗi dự án mà đối tác
-                            đã tin tưởng gửi gắm. Mục tiêu lớn nhất của chúng
-                            tôi là đem đến cho khách hàng, dự án và cho chính
-                            công việc sản xuất của Reddi Team một sự TỐI ƯU
-                            toàn diện.
+                            Reddi Studio specializes in producing media solution and taking care of your brand during communication journey. 
+                            We attempt to provide effiective and optimal solutions in each project that our partner have trusted. <br>
+                            Our biggest aim is to bring our clients, projects and REDDI STUDIO's production a comprehensive optimization.
                           </span>
                         </div>
                       </div>
@@ -212,11 +206,10 @@
                       <div class="group-title">
                         <div class="rio-text-title font-22-26 black" style="text-align: CENTER">
                           <span style="font-size: 28px"><span style="font-weight: 800"><strong><span
-                                  style="font-family: Mulish, sans-serif">HIỂU VỀ PHONG CÁCH S&Aacute;NG TẠO CỦA
-                                  CH&Uacute;NG T&Ocirc;I QUA TỪNG<br type="xs" />
+                                  style="font-family: Mulish, sans-serif">UNDERSTAND US FROM EACH OF OUR<br type="xs" />
                                   <a class="blue"
-                                    href="https://drive.google.com/file/d/13G9Lb7ho-t9AlVZBZo3giiuxPE6d8NII/view?usp=share_link"
-                                    target="_blank">DỰ &Aacute;N</a></span></strong></span></span>
+                                    href="projects-international.html"
+                                    >PROJECTS</a></span></strong></span></span>
                         </div>
                       </div>
 
@@ -225,7 +218,7 @@
                           <div class="btn-yellow">
                             <a href="https://drive.google.com/file/d/13G9Lb7ho-t9AlVZBZo3giiuxPE6d8NII/view?usp=share_link"
                               target="_blank"><span style="font-weight: 800">
-                                <font face="Mulish, sans-serif"><b>TẢI&nbsp;PORTFOLIO</b></font>
+                                <font face="Mulish, sans-serif"><b>DOWNLOAD PORTFOLIO</b></font>
                               </span></a>
                           </div>
                         </div>
@@ -234,13 +227,9 @@
                           <div class="rio-body" style="text-align: justify">
                             <span style="font-weight: 500"><span style="font-size: 18px"><span style="
                                       font-family: Merriweather, sans-serif;
-                                    ">Đồng hành cùng nhiều đơn vị trong nước và
-                                  quốc tế, Reddi Studio đã gây dựng cho mình
-                                  một Portfolio phong phú các giải pháp & dự
-                                  án sáng tạo mang đậm chất riêng. Với tư duy
-                                  cân bằng từ mục tiêu của thương hiệu và khả
-                                  năng sáng tạo, chúng tôi mong muốn đồng hành
-                                  cùng dự án của bạn trong tương lại.
+                                    ">Companion with many domestic & international partners, 
+                                    REDDI STUDIO owns a Porfolio with a wide range of creative solutions and projects with our own unique characteristics.
+                                     With the mindset of balancing the brand's aim and creative ability, we would love to accompany with your projects in the future.
                                 </span></span></span>
                           </div>
                         </div>
@@ -256,7 +245,7 @@
                           <a href="https://www.behance.net/gallery/149402183/Annual-Report-Design-2021-2022"
                             target="_blank">
                             <div class="img-fit-ratio">
-                              <img src="upload/images/profolio/1.png" alt="Annual Report 2022 Collection" />
+                              <img src="upload/images/profolio/1.jpg" alt="Annual Report 2022 Collection" />
                             </div>
                           </a>
                         </div>
@@ -303,17 +292,17 @@
             </div>
 
             <div class="out-client">
-              <div class="container">
+              <div class="container d-none">
                 <div class="row justify-content-center">
-                  <div class="new_title pb-5">VÌ SAO CHỌN CHÚNG TÔI?</div>
+                  <div class="new_title pb-5">WHY CHOOSE US?</div>
                 </div>
                 <div class="row pb-5">
-                  <div class="col-md-6 new_subtitle text-center pb-5">300+ khách hàng tin tưởng</div>
-                  <div class="col-md-6 new_subtitle text-center">1000+ dự án đã triển khai</div>
+                  <div class="col-md-6 new_subtitle text-center pb-5">300+ clients</div>
+                  <div class="col-md-6 new_subtitle text-center">1000+ sucessful projects</div>
                 </div>
                 <div class="row pb-5">
                   <div class="col-12 new_subtitle text-center">
-                    22 kỷ lục số dự án trong 1 tháng
+                    22 - Record number of projects in 1 month
                   </div>
                 </div>
               </div>
@@ -321,16 +310,13 @@
               <div class="group-title">
                 <div class="rio-h1 title">
                   <span style="font-weight: 800"><span style="font-family: Mulish, sans-serif"><span
-                        style="font-size: 28px"><strong>Kh&aacute;ch h&agrave;ng</strong></span></span></span>
+                        style="font-size: 28px"><strong>CLIENTS</strong></span></span></span>
                 </div>
 
                 <div class="rio-body-text-merriweather" mt>
                   <span style="font-weight: 500"><span style="font-size: 18px"><span
-                        style="font-family: Merriweather, sans-serif">Reddi Studio đã đồng hành cùng nhiều đối tác lớn
-                        nhỏ
-                        và đa dạng lĩnh vực tại thị trường Việt Nam và quốc
-                        tế. Cùng nhiều khách hàng khác, bạn chính là người
-                        đồng hành tiếp theo của chúng tôi!</span></span></span>
+                        style="font-family: Merriweather, sans-serif">REDDI Studio have accompanied with many domestics & international partners. 
+                        Along with other brands, you are our next our companion!</span></span></span>
                 </div>
               </div>
 
@@ -388,7 +374,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/11.jpg" alt="Vinasoy" />
+                      <img src="upload/images/clients/11.png" alt="Vinasoy" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -468,7 +454,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/27.jpg" alt="DOJI" />
+                      <img src="upload/images/clients/27.png" alt="DOJI" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -493,7 +479,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/32.png" alt="MCGANN" />
+                      <img src="upload/images/clients/32.png" style="height: 40%;" alt="MCGANN" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -519,9 +505,9 @@
                 </div>
               </div>
 
-              <div class="container">
+              <div class="container d-none">
                 <div class="row justify-content-center mb-4">
-                  <div class="new_title text-center">KHÁCH HÀNG NÓI VỀ REDDI STUDIO</div>
+                  <div class="new_title text-center">CUSTOMERS TALK ABOUT REDDI STUDIO</div>
                 </div>                
                 <div class="row">
                   <div class="col-md-6 row justify-content-center">
@@ -533,11 +519,9 @@
                       <span class="fa fa-star" style="color: orange"></span>
                     </div>
                     <div class="new_subtitle text-center p-4">
-                      “Thay mặt cho MB Bank xin gửi lời cảm ơn chân thành đến
-                      ZS đã đồng hành cùng ngân hàng chúng tôi trong dự án lần
-                      này. Rất đúng đắn khi lựa chọn ZS vì có đội ngũ nhân sự
-                      nhiệt tình và chuyên môn tốt. Chúc cho công ty ngày càng
-                      phát triển hơn nữa.” <br /><br />Trần Văn Thanh
+                      “On behalf of MB Bank, I would like to thank Reddi Studio for accompanying our bank in this project. 
+                      It is very right to choose Reddi Studio because of your enthusiastism and professional. 
+                      Wish the company more and more development.” <br /><br />Trần Văn Thanh
                       <br />Marketing Manager - MB Bank
                     </div>
                   </div>
@@ -550,11 +534,8 @@
                         <span class="fa fa-star" style="color: orange"></span>
                       </div>
                     <div class="new_subtitle text-center p-4">
-                      “Rất vui khi được làm việc với ZS trong suốt thời gian
-                      qua với 03 dự án liên tiếp, bên tôi rất hài lòng với
-                      chất lượng sản phẩm và sự sáng tạo độc đáo hợp với thị
-                      trường và có sức cạnh tranh cao. Chúng tôi chắc chắn sẽ
-                      tiếp tục hợp tác với ZS ở những dự án sau.”
+                      “Glad to coporate with Reddi Studio through 3 consecutive projects. I was completely pleased with quality and creativity that you made. 
+                      Especially Reddi Studio's enthusiastic support made me extremely impressed. Thank you very much.”
                       <br /><br />Nguyễn Thị Bích Thảo <br />Giám đốc -
                       Dingtea
                     </div>
@@ -570,10 +551,9 @@
                       <span class="fa fa-star" style="color: orange"></span>
                     </div>
                     <div class="new_subtitle col-12 text-center p-4">
-                      ZS đáng tin cậy, sáng tạo và đội ngũ nhân sự
-                      làm việc đầy nhiệt huyết. Bố cục thiết kế hài hòa, sáng
-                      tạo. Đặc biệt là sự nhiệt tình hỗ trợ của ZS làm tôi vô
-                      cùng ấn tượng. Cảm ơn các bạn rất nhiều!”
+                      ZS has what we need for an Agency - Trustworthy, innovative and passionate staff. 
+                      Harmonious and creative layout.
+                       Thank you very much and look forward to our next cooperation!”
                       <br /><br />Trần Anh Dũng CEO - ONEW
                     </div>
                   </div>
@@ -591,11 +571,24 @@
             <ul class="padding-footer logo-list">
               <li class="logo-item">
                 <a href="https://reddi.studio/" target="_blank"><img alt="Reddi Studio"
-                    src="upload/images/logo.png" style="width: 90px; height: 90px" />
+                    src="upload/images/logos/reddi_lg_white.svg" style="width: 80%;"/>
                 </a>
               </li>
             </ul>
           </div>
+          <div class="col-12 col-lg-5 offset-lg-1">
+            <div class="padding-footer group-info">
+            <div class="group-item">
+            <div class="rio-text font-16-120 white email">nowreddi@gmail.com</div>
+            <div class="rio-text font-16-120 white website">www.reddi.studio</div>
+            </div>
+            <div class="group-item">
+            <div class="rio-text font-16-120 white phone">+84 86 256 1379</div>
+            <div class="rio-text font-16-120 white address">6th Floor, Block 100 <br>
+              126 Lane Khuat Duy Tien, Thanh Xuan, HN</div>
+            </div>
+            </div>
+            </div>
         </div>
 
         <div class="row">
@@ -609,10 +602,16 @@
             <div class="group-copyright">
               <div class="copyright">
                 <div class="rio-text font-16-20 white">
-                  © 2012 – 2022 REDDI STUDIO - All Rights Reserved.
+                  © 2012 – 2022 Reddi Studio - All Rights Reserved.
                 </div>
               </div>
               <ul class="social-network">
+                <li class="social-item">
+                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                    target="_blank">
+                    Dribbble
+                  </a>
+                </li>
                 <li class="social-item">
                   <a class="rio-text font-16-20 white" href="#" rel="noopener"
                     target="_blank">
@@ -620,7 +619,7 @@
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://www.facebook.com/ReddiGlobal" rel="noopener"
                     target="_blank">
                     Facebook
                   </a>
@@ -629,12 +628,6 @@
                   <a class="rio-text font-16-20 white" href="#" rel="noopener"
                     target="_blank">
                     Instagram
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
-                    target="_blank">
-                    LinkedIn
                   </a>
                 </li>
               </ul>
