--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Reddi Studio">
   <meta name="keywords" content>
   <meta name="author" content="Reddi Studio">
-  <link rel="shortcut icon" href="upload/images/logo.png" />
+  <link rel="shortcut icon" href="upload/images/favicon.png" type="image/x-icon" />
 
   <meta property="og:locale" content="vi" />
   <meta property="og:title" content="Dự án" />
@@ -79,7 +79,7 @@
             <div class="menu-below">
               <ul class="navbar-nav">
                 <li class="nav-item ">
-                  <a class="nav-link rio-text-title font-16-19 black" href="en.html">
+                  <a class="nav-link rio-text-title font-16-19 black" href="index.html">
                     <div class="animations " data-animation="text" data-size="1.2">
                       Home
                     </div>
@@ -152,21 +152,22 @@
             <div class="row">
               <div class="col-12 col-lg-6">
                 <div class="title rio-h1">
-                  <div class="animations" data-animation="text"><span style="font-size:28px;"><span
-                        style="font-weight:800;"><strong><span style="font-family:Mulish,sans-serif;">WE
-                            CREATE</span></strong></span></span>
-                    <ul class="text-slide-up">
-                      <li><span style="font-size:28px;"><span style="font-weight:800;"><strong><span
-                                style="font-family:Mulish,sans-serif;">Wow</span></strong></span></span>
-                      </li>
-                      <li><span style="font-size:28px;"><span style="font-weight:800;"><strong><span
-                                style="font-family:Mulish,sans-serif;">Solutions</span></strong></span></span>
-                      </li>
-                    </ul>
+                  <div class="animations" data-animation="text">
+                    <span style="font-size:28px;">
+                      <span style="font-weight:800;">
+                        <strong>
+                          <span style="font-family:Mulish,sans-serif;">WE KNOW HOW TO MAKE</span>
+                        </strong>
+                      </span>
+                    </span>
                     <br />
-                    <span style="font-size:28px;"><span style="font-weight:800;"><strong><span
-                            style="font-family:Mulish,sans-serif;">FROM THE
-                            BASIC</span></strong></span></span>
+                    <span style="font-size:28px;">
+                      <span style="font-weight:800;">
+                        <strong>
+                          <span style="font-family:Mulish,sans-serif;">YOUR STORIES IMPACTFUL</span>
+                        </strong>
+                      </span>
+                    </span>
                   </div>
                 </div>
               </div>
@@ -391,12 +392,25 @@
           <div class="col-12 col-lg-6">
             <ul class="padding-footer logo-list">
               <li class="logo-item">
-                <a href="https://reddi.studio/" target="_blank"><img alt="Reddi Studio" src="upload/images/logo.png"
-                    style="width: 90px; height: 90px" />
+                <a href="https://reddi.studio/" target="_blank"><img alt="Reddi Studio"
+                    src="upload/images/logos/reddi_lg_white.svg" style="width: 80%;"/>
                 </a>
               </li>
             </ul>
           </div>
+          <div class="col-12 col-lg-5 offset-lg-1">
+            <div class="padding-footer group-info">
+            <div class="group-item">
+            <div class="rio-text font-16-120 white email">nowreddi@gmail.com</div>
+            <div class="rio-text font-16-120 white website">www.reddi.studio</div>
+            </div>
+            <div class="group-item">
+            <div class="rio-text font-16-120 white phone">+84 86 256 1379</div>
+            <div class="rio-text font-16-120 white address">6th Floor, Block 100 <br>
+              126 Lane Khuat Duy Tien, Thanh Xuan, HN</div>
+            </div>
+            </div>
+            </div>
         </div>
 
         <div class="row">
@@ -410,28 +424,32 @@
             <div class="group-copyright">
               <div class="copyright">
                 <div class="rio-text font-16-20 white">
-                  © 2012 – 2022 REDDI STUDIO - All Rights Reserved.
+                  © 2012 – 2022 Reddi Studio - All Rights Reserved.
                 </div>
               </div>
               <ul class="social-network">
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener" target="_blank">
+                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                    target="_blank">
+                    Dribbble
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                    target="_blank">
                     Behance
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener" target="_blank">
+                  <a class="rio-text font-16-20 white" href="https://www.facebook.com/ReddiGlobal" rel="noopener"
+                    target="_blank">
                     Facebook
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener" target="_blank">
+                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                    target="_blank">
                     Instagram
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener" target="_blank">
-                    LinkedIn
                   </a>
                 </li>
               </ul>
