--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="rio-body-text-merriweather" mt>
                   <span style="font-weight: 500"><span style="font-size: 18px"><span
                         style="font-family: Merriweather, sans-serif">REDDI Studio have accompanied with many domestics & international partners. 
-                        Along with other brands, you are our next our companion!</span></span></span>
+                        Along with other brands, you are our next companion!</span></span></span>
                 </div>
               </div>
 
