--- a/projects-international.html
+++ b/projects-international.html
@@ -458,7 +458,7 @@
         <section class="contact-btn">
           <div class="container">
             <div class="btn-wrap">
-              <a class="btn-yellow" href="lien-he.html">Contact Us</a>
+              <a class="btn-yellow" href="contact.html">Contact Us</a>
             </div>
           </div>
         </section>
