--- a/services.html
+++ b/services.html
@@ -153,7 +153,7 @@
             <div class="services">
                 <div class="container">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-md-12">
                             <section class="about-services">
                                 <div class="row">
                                     <div class="col-12 col-lg-12">
@@ -334,7 +334,7 @@
                                         </td>
                                     </tr>
                                     <tr class="service-item">
-                                        <td class="title active">
+                                        <td class="title">
                                             <span style="font-size:20px;"><span
                                                     style="font-family:Mulish,sans-serif;"><strong>Visual
                                                         Campaign</strong></span></span>
@@ -361,7 +361,7 @@
                                         </td>
                                     </tr>
                                     <tr class="service-item">
-                                        <td class="title active">
+                                        <td class="title ">
                                             <strong><span style="font-size:20px;"><span
                                                         style="font-family:Mulish,sans-serif;">Print
                                                         Design</span></span></strong>
@@ -392,7 +392,7 @@
                                 </table>
                             </section>
                         </div>
-                        <div class="col-6 col-lg-5 offset-lg-1">
+                        <div class="col-12 col-lg-5 offset-lg-1">
                             <div class="customize-service-form">
                                 <div class="title rio-h1"><span style="font-weight:800;"><span
                                             style="font-size:28px;"><span
