--- a/du-an.html
+++ b/du-an.html
@@ -137,7 +137,9 @@
                 </div>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse">
-                <span class="navbar-toggler-icon close"></span>
+                <span class="navbar-toggler-icon close">
+                  <i class="fa fa-close" style="color: #000000"></i>
+                </span>
               </button>
             </div>
           </div>
