--- a/services.html
+++ b/services.html
@@ -140,8 +140,10 @@
                                 </div>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse">
-                                <span class="navbar-toggler-icon close"></span>
-                            </button>
+                                <span class="navbar-toggler-icon close">
+                                  <i class="fa fa-close" style="color: #000000"></i>
+                                </span>
+                              </button>
                         </div>
                     </div>
                 </div>
