--- a/projects-international.html
+++ b/projects-international.html
@@ -509,13 +509,13 @@
               </div>
               <ul class="social-network">
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://dribbble.com/ReddiStudio" rel="noopener"
                     target="_blank">
                     Dribbble
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://www.behance.net/reddistudio" rel="noopener"
                     target="_blank">
                     Behance
                   </a>
@@ -527,7 +527,7 @@
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://www.instagram.com/reddistudio/" rel="noopener"
                     target="_blank">
                     Instagram
                   </a>
