--- a/services.html
+++ b/services.html
@@ -487,31 +487,31 @@
                       </div>
                     </div>
                     <ul class="social-network">
-                      <li class="social-item">
-                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
-                          target="_blank">
-                          Dribbble
-                        </a>
-                      </li>
-                      <li class="social-item">
-                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
-                          target="_blank">
-                          Behance
-                        </a>
-                      </li>
-                      <li class="social-item">
-                        <a class="rio-text font-16-20 white" href="https://www.facebook.com/ReddiGlobal" rel="noopener"
-                          target="_blank">
-                          Facebook
-                        </a>
-                      </li>
-                      <li class="social-item">
-                        <a class="rio-text font-16-20 white" href="#" rel="noopener"
-                          target="_blank">
-                          Instagram
-                        </a>
-                      </li>
-                    </ul>
+                        <li class="social-item">
+                          <a class="rio-text font-16-20 white" href="https://dribbble.com/ReddiStudio" rel="noopener"
+                            target="_blank">
+                            Dribbble
+                          </a>
+                        </li>
+                        <li class="social-item">
+                          <a class="rio-text font-16-20 white" href="https://www.behance.net/reddistudio" rel="noopener"
+                            target="_blank">
+                            Behance
+                          </a>
+                        </li>
+                        <li class="social-item">
+                          <a class="rio-text font-16-20 white" href="https://www.facebook.com/ReddiGlobal" rel="noopener"
+                            target="_blank">
+                            Facebook
+                          </a>
+                        </li>
+                        <li class="social-item">
+                          <a class="rio-text font-16-20 white" href="https://www.instagram.com/reddistudio/" rel="noopener"
+                            target="_blank">
+                            Instagram
+                          </a>
+                        </li>
+                      </ul>
                   </div>
                 </div>
               </div>
