--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/5.png" alt="Vinamilk" />
+                      <img src="upload/images/clients/5.png" alt="Vinamilk" style="height: 80%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -366,12 +366,12 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/9.png" alt="TBS GROUP" />
+                      <img src="upload/images/clients/9.png" alt="TBS GROUP" style="height: 80%;"/>
                     </div>
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/10.png" alt="Nestle" />
+                      <img src="upload/images/clients/10.png" alt="Nestle" style="width: 60%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -381,7 +381,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/12.png" alt="Vinmart" />
+                      <img src="upload/images/clients/12.png" alt="Vinmart" style="width: 50%;"/>
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -401,12 +401,12 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/16.png" alt="SAIGON CO.OP" />
+                      <img src="upload/images/clients/16.png" alt="SAIGON CO.OP" style="height: 80%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/17.png" alt="AEON" />
+                      <img src="upload/images/clients/17.png" alt="AEON" style="height: 80%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -416,7 +416,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/19.png" alt="TOTAL" />
+                      <img src="upload/images/clients/19.png" alt="TOTAL" style="width: 60%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -426,7 +426,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/21.png" alt="Uni President" />
+                      <img src="upload/images/clients/21.png" alt="Uni President" style="height: 80%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -446,7 +446,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/25.png" alt="Honda" />
+                      <img src="upload/images/clients/25.png" alt="Honda" style="height: 150%; width: 100%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -496,7 +496,7 @@
                   </div>
                   <div class="logo-slide-item">
                     <div class="image-warp">
-                      <img src="upload/images/clients/35.png" alt="BIDV" />
+                      <img src="upload/images/clients/35.png" alt="BIDV" style="height: 80%;" />
                     </div>
                   </div>
                   <div class="logo-slide-item">
@@ -609,13 +609,13 @@
               </div>
               <ul class="social-network">
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://dribbble.com/ReddiStudio" rel="noopener"
                     target="_blank">
                     Dribbble
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://www.behance.net/reddistudio" rel="noopener"
                     target="_blank">
                     Behance
                   </a>
@@ -627,7 +627,7 @@
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                  <a class="rio-text font-16-20 white" href="https://www.instagram.com/reddistudio/" rel="noopener"
                     target="_blank">
                     Instagram
                   </a>
