--- a/lien-he.html
+++ b/lien-he.html
@@ -330,13 +330,13 @@
                   </div>
                   <ul class="social-network">
                     <li class="social-item">
-                      <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                      <a class="rio-text font-16-20 white" href="https://dribbble.com/ReddiStudio" rel="noopener"
                         target="_blank">
                         Dribbble
                       </a>
                     </li>
                     <li class="social-item">
-                      <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                      <a class="rio-text font-16-20 white" href="https://www.behance.net/reddistudio" rel="noopener"
                         target="_blank">
                         Behance
                       </a>
@@ -348,7 +348,7 @@
                       </a>
                     </li>
                     <li class="social-item">
-                      <a class="rio-text font-16-20 white" href="#" rel="noopener"
+                      <a class="rio-text font-16-20 white" href="https://www.instagram.com/reddistudio/" rel="noopener"
                         target="_blank">
                         Instagram
                       </a>
